// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking definitions \`Checkout Abandoned\` return should match the snapshot 1`] = `
Object {
  "tid": 2084,
}
`;

exports[`Omnitracking definitions \`Checkout Started\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 100,
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "tid": 2918,
}
`;

exports[`Omnitracking definitions \`Checkout Step Editing\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": 2,
  "tid": 2923,
}
`;

exports[`Omnitracking definitions \`Checkout Step Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"SUBMIT\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking definitions \`Order Completed\` return should match the snapshot 1`] = `
Object {
  "orderCode": "ABC12",
  "tid": 2831,
}
`;

exports[`Omnitracking definitions \`Place Order Started\` return should match the snapshot 1`] = `
Array [
  Object {
    "tid": 10097,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
  Object {
    "orderCode": "ABC12",
    "promocode": "promo",
    "shippingTotalValue": 10,
    "tid": 188,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
]
`;

exports[`Omnitracking definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "tid": 16,
  "val": null,
}
`;

exports[`Omnitracking definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "tid": 35,
  "val": null,
}
`;

exports[`Omnitracking definitions \`Product List Viewed\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "tid": 2832,
}
`;

exports[`Omnitracking definitions \`Promocode Applied\` return should match the snapshot 1`] = `
Object {
  "errorMessage": "No promocode available.",
  "hasError": true,
  "promoCode": "PROMO_ABC",
  "tid": 311,
}
`;

exports[`Omnitracking definitions \`Share\` return should match the snapshot 1`] = `
Object {
  "actionArea": "share_button_facebook",
  "productId": undefined,
  "tid": 1205,
}
`;

exports[`Omnitracking definitions \`Sign-up Form Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"REGISTER\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking definitions \`Sign-up Newsletter\` return should match the snapshot 1`] = `
Object {
  "gender": "Woman,Man",
  "tid": 2831,
}
`;

exports[`Omnitracking definitions \`bag\` return should match the snapshot 1`] = `
Object {
  "basketQuantity": 8,
  "basketValue": 100,
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1,\\"itemQuantity\\":5},{\\"productId\\":98765,\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeID\\":1,\\"itemQuantity\\":3}]",
  "viewSubType": "Bag",
  "viewType": "Shopping Bag",
}
`;

exports[`Omnitracking definitions \`checkout\` return should match the snapshot 1`] = `
Object {
  "orderCode": "ASH12",
  "orderId": undefined,
  "orderValue": 100,
  "shippingTotalValue": 10,
  "viewSubType": "Checkout SPA",
  "viewType": "Checkout SPA",
}
`;

exports[`Omnitracking definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "bookmarkId",
    "bookmarkItemList",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "applePayStatus",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderValue",
    "orderVAT",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "bookmarkId",
    "bookmarkItemList",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "attributesList",
    "categoryList",
    "colourList",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "designerList",
    "discount",
    "filtersApplied",
    "filterType",
    "interactionType",
    "marketType",
    "orderSummary",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "selectableFieldsList",
    "selectedOrderType",
    "sizeList",
    "orderDetails",
    "orderList",
    "paymentStatus",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "bookmarkId",
    "bookmarkItemList",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "categoryId",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "bookmarkId",
    "bookmarkItemList",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "applePayStatus",
    "categoryId",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "hasVto",
    "itemColourId",
    "lookId",
    "numberOfColours",
    "numberOfSizes",
    "numberOfSizesInStore",
    "outfitId",
    "rankType",
    "reviews",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking definitions \`product-details\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1},{\\"productId\\":98765,\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "viewSubType": "Product",
  "viewType": "Product",
}
`;

exports[`Omnitracking definitions \`product-listing\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1},{\\"productId\\":98765,\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "viewSubType": "Listing",
  "viewType": "Listing",
}
`;

exports[`Omnitracking definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "advertiserId",
  "categoryId",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "deliveryInformationDetails",
  "designerId",
  "designerName",
  "dropDownListSelection",
  "fittingRoomQuantity",
  "isFixedMerchant",
  "itemColourId",
  "itemCoordinates",
  "itemQuantity",
  "itemSize",
  "loadItemCoordinate",
  "moduleContentID",
  "moduleContentName",
  "moduleId",
  "moduleLoadTime",
  "moduleState",
  "moduleType",
  "moduleWasInteracted",
  "moduleWasSeen",
  "numberOfColours",
  "orderCode",
  "orderCodeId",
  "partnersSubscriptionList",
  "priceCurrency",
  "productCount",
  "productPackagingOptions",
  "promoCode",
  "promotionDetails",
  "provider",
  "recommendationsId",
  "recommendationsProductList",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "targetId",
  "targetType",
  "totalStock",
  "totalStockInStore",
  "unitFullPrice",
  "unitSalePrice",
  "productId",
  "accessTier",
  "actionArea",
  "bookmarkId",
  "bookmarkItemList",
  "categoryName",
  "clientTimestamp",
  "department",
  "dismiss",
  "errorMessage",
  "fittingRoomName",
  "hasError",
  "hasNewMessages",
  "integrationId",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "merchantLocationId",
  "messageComponentsList",
  "messageId",
  "messageNumber",
  "partnerDocuments",
  "scrollDepth",
  "searchQuery",
  "skuItemList",
  "status",
  "storeConnections",
  "storeId",
  "tagList",
  "uniqueViewId",
  "uuid",
  "variantId",
  "attributesList",
  "categoryList",
  "colourList",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerList",
  "discount",
  "filtersApplied",
  "filterType",
  "interactionType",
  "marketType",
  "orderSummary",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "selectableFieldsList",
  "selectedOrderType",
  "sizeList",
  "val",
  "tid",
]
`;

exports[`Omnitracking definitions \`wishlist\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1,\\"itemQuantity\\":2},{\\"productId\\":98765,\\"itemPromotion\\":1,\\"designerName\\":\\"shirt designer name\\",\\"category\\":\\"shirt\\",\\"itemFullPrice\\":1,\\"sizeID\\":1,\\"itemQuantity\\":3}]",
  "viewSubType": "Wishlist",
  "viewType": "Wishlist",
  "wishlistQuantity": 5,
}
`;
